Update on start of combat turn

--- a/languages/en.json
+++ b/languages/en.json
@@ -13,7 +13,9 @@
       "DuplicateHint": "Wether the Button to Duplicate an Action Window will be displayed or not",
       "LinkActorSetting": "Show Link to Actor Button",
       "LinkActorId": "LinkActorBoolean",
-      "LinkActorHint": "Experimental: Be able to link a window to an token and get their actions",
+      "LinkActorHint": "Experimental: Be able to link a window to a token and get their actions",
+      "UpdateTurnStart": "Update actions at start of turn",
+      "UpdateTurnStartHint": "Automatically update the window at the start of an actor's turn",
       "ShowPlayerSetting": "Behaviour of the Show Player Button",
       "ShowPlayerId": "ShowPlayerChoice",
       "ShowPlayerHint": "Do you want to have a dialog open up, to be able to send your actions to specific people?\ndefault: Popup Dialog",
